--- a/galeria.html
+++ b/galeria.html
@@ -18,7 +18,7 @@
   </header>
   <main class="galeria">
     <div class="card">
-      <img src="imagens/enroladinho.jpg" alt="Risole">
+      <img src="imagens/pastel.jpg" alt="Risole">
       <h3>Risole</h3>
       <p>Bandeja com 12 unidades — R$ 22,00</p>
 
