--- a/index.html
+++ b/index.html
@@ -17,14 +17,21 @@
     <button id="toggleTheme">🌙</button>
   </header>
   <main>
-    <section class="historia">
-      <img src="imagens/logo.png" alt="Logo Sabor RJ" class="logo">
-      <h2>Nossa História</h2>
-      <p>A <strong>Sabor RJ</strong> nasceu com o objetivo de trazer os melhores salgados artesanais para você. 
-      Nossos pasteizinhos e enroladinhos são feitos com ingredientes de qualidade e muito carinho, perfeitos para qualquer ocasião.</p>
-      <p>Estamos localizados em <strong>Av. José Ariedo Vendramini, n. 261</strong>. Venha nos visitar!</p>
-    </section>
-  </main>
+  <section class="historia">
+    <img src="imagens/logo.png" alt="Logo Sabor RJ" class="logo">
+    <h2>Nossa História</h2>
+    <p>A <strong>Sabor RJ</strong> nasceu com o objetivo de trazer os melhores salgados artesanais para você. 
+    Nossos pasteizinhos e enroladinhos são feitos com ingredientes de qualidade e muito carinho, perfeitos para qualquer ocasião.</p>
+    <p>Estamos localizados em <strong>Av. José Ariedo Vendramini, n. 261</strong>. Venha nos visitar!</p>
+  </section>
+
+  <!-- BOTÃO CENTRALIZADO -->
+  <div style="text-align:center; margin:30px;">
+    <a href="galeria.html">
+      <button class="simular">Ver Produtos</button>
+    </a>
+  </div>
+</main>
   <footer>
     <a href="tel:+5517991243491">📞 (17) 99124-3491</a> |
     <a href="https://www.instagram.com/Rany_fernanda_vb" target="_blank">@Rany_fernanda_vb</a> |
